# spacestationgalaxy

./: CMakeLists.txt  LICENSE  README.md
src/ssg/: CMakeLists.txt  plugin.cpp  plugin.h
src/ssgclient/: CMakeLists.txt  almain.cpp  main.cpp  vkmain.cpp
src/ssgserver/: CMakeLists.txt  main.cpp
